--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,24 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Metaverse Slayer</title>
+    <title>Harry Potter</title>
     <meta name="title" content="Metaverse Slayer" />
-    <meta name="description" content="Team up with me to defeat the foes of the Metaverse!" />
-
-    <!-- Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://buildspace.so/">
-    <meta property="og:title" content="Metaverse Slayer">
-    <meta property="og:description" content="Team up with me to defeat the foes of the Metaverse!">
-    <meta property="og:image" content="https://s3.amazonaws.com/cdn.buildspace.so/courses/nft-game/metadata.png">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://buildspace.so/">
-    <meta property="twitter:title" content="Metaverse Slayer">
-    <meta property="twitter:description" content="Team up with me to defeat the foes of the Metaverse!">
-    <meta property="twitter:image"
-      content="https://s3.amazonaws.com/cdn.buildspace.so/courses/nft-game/metadata.png">
+    <meta name="description" content="Team up to defeat the dark Lord" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
